slide me text for slider

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       <input type="button" id="color-button" value="Change">
     </div>
 
-    <div class="range-container">
-      <input type="range" min="1" max="80" value="5" id="font-size-range">
-    </div>
+<div class="range-container">
+  <p class="slide-text">Slide me</p>
+  <input type="range" min="1" max="80" value="5" id="font-size-range">
+</div>
 
     <script>
       const fontSizeRange = document.getElementById('font-size-range');
