anne bday message

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 	<div>
-		<h1>Kari Mruz</h1>
-		<p>I don't know how to code. I made this with ChatGPT</p>
+		<h1>HAPPY BIRTHDAY ANNE</h1>
+		<p>You are the best</p>
 	</div>
 
 	<div class="range-container">
 		<p class="slider-text">Slide me</p>
-		<input type="range" min="1" max="80" value="50" id="font-size-range">
+		<input type="range" min="1" max="80" value="30" id="font-size-range">
 	</div>
 
 	<img id="logo" src="walter.JPG" alt="Walter's photo">
